fixed alignment of cheatsheet

--- a/style/cheat-sheet.css
+++ b/style/cheat-sheet.css
@@ -8,6 +8,8 @@ div {
     width: 50em;
     padding: 3em;
     font-size: 1.5em;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 h1 {
